--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
     "@ng-select/ng-select": "^9.0.2",
+    "bootstrap": "^5.2.1",
     "mapbox-gl": "^2.10.0",
     "primeicons": "^5.0.0",
     "primeng": "^14.0.2",
