--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/router": "^14.1.0",
     "@ng-select/ng-select": "^9.0.2",
     "bootstrap": "^5.2.1",
+    "date-fns": "^2.29.3",
     "mapbox-gl": "^2.10.0",
     "primeicons": "^5.0.0",
     "primeng": "^14.0.2",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.7.1",
     "tslib": "^2.3.0",
     "xng-breadcrumb": "^8.0.2",
     "zone.js": "~0.11.4"
